--- a/DWPennyFinder.iOS/Info.plist
+++ b/DWPennyFinder.iOS/Info.plist
@@ -34,5 +34,7 @@
 	<string>DWPennyFinder</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Can we use location services while app is in use?</string>
 </dict>
 </plist>
