--- a/DWPennyFinder/DWPennyFinder.csproj
+++ b/DWPennyFinder/DWPennyFinder.csproj
@@ -6,11 +6,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />  
-    <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2578" />  
     <PackageReference Include="Xamarin.Forms.GoogleMaps" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Maui.Controls.Maps" Version="7.0.59" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.5" />
+    <PackageReference Include="Xamarin.Forms.Maps" Version="5.0.0.2578" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\.editorconfig" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.Maui.Controls, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
   </ItemGroup>
 </Project>
