adding to list functions as expected and also pulls user lat and long behind the scenes for mapping purposes

--- a/DWPennyFinder.iOS/DWPennyFinder.iOS.csproj
+++ b/DWPennyFinder.iOS/DWPennyFinder.iOS.csproj
@@ -27,6 +27,8 @@
     <MtouchArch>x86_64</MtouchArch>
     <MtouchLink>None</MtouchLink>
     <MtouchDebug>true</MtouchDebug>
+    <CodesignProvision>iOS Team Provisioning Profile: com.companyname.DWPennyFinder</CodesignProvision>
+    <CodesignKey>Apple Development: jessielove321@hotmail.com (CU9Q7D7YXX)</CodesignKey>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <DebugType>none</DebugType>
