--- a/DWPennyFinder.iOS/DWPennyFinder.iOS.csproj
+++ b/DWPennyFinder.iOS/DWPennyFinder.iOS.csproj
@@ -70,6 +70,7 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <None Include="Database\item.db3" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
