--- a/DWPennyFinder.iOS/DWPennyFinder.iOS.csproj
+++ b/DWPennyFinder.iOS/DWPennyFinder.iOS.csproj
@@ -140,6 +140,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Rg.Plugins.Popup">
+      <Version>2.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2578" />
     <PackageReference Include="Microsoft.Maui.Controls.Maps">
       <Version>7.0.59</Version>
@@ -163,5 +166,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Database\" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\disney-mov-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\disney-mov-16.png" />
   </ItemGroup>
 </Project>
