--- a/DWPennyFinder.iOS/DWPennyFinder.iOS.csproj
+++ b/DWPennyFinder.iOS/DWPennyFinder.iOS.csproj
@@ -110,6 +110,8 @@
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\58 1.png" />
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\152.png" />
     <BundleResource Include="Resources\mouse_30x30.png" />
+    <BundleResource Include="Resources\screen.png" />
+    <BundleResource Include="Resources\screenwords.png" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
