--- a/DWPennyFinder.iOS/DWPennyFinder.iOS.csproj
+++ b/DWPennyFinder.iOS/DWPennyFinder.iOS.csproj
@@ -27,8 +27,8 @@
     <MtouchArch>x86_64</MtouchArch>
     <MtouchLink>None</MtouchLink>
     <MtouchDebug>true</MtouchDebug>
-    <CodesignProvision>iOS Team Provisioning Profile: com.companyname.DWPennyFinder</CodesignProvision>
-    <CodesignKey>Apple Development: jessielove321@hotmail.com (CU9Q7D7YXX)</CodesignKey>
+    <CodesignProvision>Automatic</CodesignProvision>
+    <CodesignKey>iPhone Developer</CodesignKey>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <DebugType>none</DebugType>
@@ -72,6 +72,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CustomMKAnnotationView.cs" />
     <Compile Include="CustomMapRenderer.cs" />
+    <Compile Include="CustomContentPageRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
@@ -148,6 +149,8 @@
     <BundleResource Include="Resources\filter.png" />
     <BundleResource Include="Resources\sort.png" />
     <BundleResource Include="Resources\add.png" />
+    <BundleResource Include="Resources\menu.png" />
+    <BundleResource Include="Resources\navigator.png" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
