--- a/DWPennyFinder.iOS/Info.plist
+++ b/DWPennyFinder.iOS/Info.plist
@@ -25,7 +25,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>DWPennyFinder</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.companyname.DWPennyFinder</string>
+	<string>com.russ1.DWPennyFinder</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>UILaunchStoryboardName</key>
